--- a/templates/partial/cookies.twig
+++ b/templates/partial/cookies.twig
@@ -3,7 +3,7 @@
 
   <p class="cookies--text">{{fn('pll_e', 'cookies_text')}}</p>
   
-  <button class="button-1 cookies_accept">
-    <span class="button-1--text">{{fn('pll_e', 'cookies_button')}}</span>
+  <button class="btn-1 cookies_accept">
+    <span class="btn-1--text">{{fn('pll_e', 'cookies_button')}}</span>
   </button>
 </div>
