--- a/templates/views/2_footer/footer.twig
+++ b/templates/views/2_footer/footer.twig
@@ -71,7 +71,7 @@
         <a class="footer__bottom__info--text txt-14" rel="noopener" rel="nofollow" target="_blank" href="{{home_url()}}">©{{date('Y')}}&nbsp;{{options.seo_title}}</a>&nbsp;&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;&nbsp;
         <a class="footer__bottom__info--text txt-14 privacy" href="{{fn('get_privacy_policy_url')}}">{{fn('pll_e', 'privacy')}}</a>
        </p>
-      <a class="footer__bottom__info--text txt-14" rel="noopener" rel="nofollow" target="_blank" href="/">{{fn('pll_e', 'ws_info')}}</a>
+      <a class="footer__bottom__info--text txt-14" rel="noopener" rel="nofollow" target="_blank" href="https://hincka.pl/">{{fn('pll_e', 'ws_info')}}</a>
     </div>
 
   </div>
