--- a/src/css/components/_banner.scss
+++ b/src/css/components/_banner.scss
@@ -1,14 +1,17 @@
 .banner{
-  @include center;
-  flex-direction: column;
-  border-radius: 1rem;
-  background: linear-gradient(#075d96 0%, #057bcb 35.13%, #057fd1 100%);
+  padding: 8.5rem 0 0;
+  background-color: var(--white);
+    &__wrap{
+      @include center;
+      flex-direction: column;
+      border-radius: 1rem;
+      background: linear-gradient(#075d96 0%, #057bcb 35.13%, #057fd1 100%);
 
-  width: 160rem;
-  margin: 0 auto;
-  padding: 7.5rem 2rem 5.4rem;
-
-  position: relative;
+      width: 160rem;
+      margin: 0 auto;
+      padding: 7.7rem 2rem 6.1rem;
+      position: relative;
+    }
     &--img{
       width: 100%;
       height: 100%;
@@ -34,7 +37,7 @@
     }
     .btn-1{
       background-color: var(--pcolor);
-      margin-top: 2.8rem;
+      margin-top: 4rem;
       position: relative;
       z-index: 1;
     }
@@ -43,6 +46,13 @@
 
 @media screen and (max-width: 800px) {
   .banner{
-   
+    padding-top: 6rem;
+      &__wrap{
+        width: 100%;
+      }
+
+      &--title{
+        line-height: 5rem;
+      }
   }
 }
