--- a/src/css/components/_catalog.scss
+++ b/src/css/components/_catalog.scss
@@ -1,10 +1,14 @@
+.catalogBg{
+  background-color: var(--white);
+  margin-bottom: 12.7rem;
+  padding-top: 16.4rem;
+  padding-bottom: 20.7rem;
+}
 .catalog{
   @include end;
 
   width: 160rem;
   margin: 0 auto;
-  margin-top: 16.3rem;
-  margin-bottom: 20.7rem;
   padding: 6rem 12.7rem 6rem 6rem;
 
   border-radius: 1rem;
@@ -12,8 +16,7 @@
 
   position: relative;
     &--img{
-      width: 62.4rem;
-      transform: rotate(-8deg);
+      width: 69.4rem;
 
       position: absolute;
       top: -7.1rem;
@@ -24,7 +27,7 @@
     }
     &__content{
       @include colStart;
-      width: 60rem;
+      width: 59rem;
         &--title{
           margin-bottom: 0.9rem;
           line-height: 6rem;
@@ -33,18 +36,46 @@
           color: var(--white);
         }
         .btn-1{
-          margin-top: 2.6rem;
-          padding: 1rem;
-          span{
-            font-size: 1.2rem;
-          }
+          margin-top: 1.9rem;
+          padding: 1rem 1.7rem;
+          background-color: var(--blue);
+          border-color: var(--blue);
+            span{
+              font-size: 1.2rem;
+            }
         }
     }
 }
 
 
 @media screen and (max-width: 800px) {
+  .catalogBg{
+    margin-bottom: 6rem;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
   .catalog{
-   
+    width: 100%;
+    flex-direction: column;
+    padding: 6rem 2rem;
+      &--img{
+        position: relative;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+      }
+      &__content{
+        width: 100%;
+          &--title{
+            font-size: 3rem;
+            line-height: 4.2rem;
+          }
+          .btn-1{
+            span{
+              font-size: 1.4rem;
+            }
+          }
+      }
   }
 }
