--- a/src/css/components/_cookies.scss
+++ b/src/css/components/_cookies.scss
@@ -1,47 +1,3 @@
-#cookies-message{ 
-  color: white; 
-  font-size: 1.4rem;
-  padding: 1rem 2rem;
-  text-align: center; 
-  position: fixed; 
-  bottom: 0; 
-  left: 0; 
-  right: 0; 
-  background-color: rgba(0,0,0,0.8); 
-  z-index: 99; 
-  box-shadow: 0 0 .5rem rgba(0,0,0,0.8); 
-  display: none;
-  justify-content: center;
-  align-items: center;
-}
-
-#accept-cookies-checkbox{ 
-  display: inline-block;
-  margin-left: 5rem;
-  padding: .2rem 4rem;
-  border: .1rem solid var(--purple);
-  background-color: var(--purple);
-  border-radius: 10rem;
-  transition: .2s;
-    &::hover{
-      background-color: var(--white);
-      color: var(--purple);
-    }
-}
-
-
-@media screen and (max-width: var(--mobile)) {
-  #cookies-message{
-    flex-direction: column;
-      #accept-cookies-checkbox{
-        margin-left: 0;
-        margin-top: 1.8rem;
-      }
-  }
-}
-
-
-
 .cookies{
   @include colStart;
 
@@ -52,6 +8,7 @@
   position: fixed;
   bottom: 2rem;
   left: 2rem;
+  z-index: 999;
 
   box-shadow: 0 1rem 3.2rem -1rem var(--grey2);
 
@@ -67,8 +24,11 @@
       margin-top: 1rem;
       margin-bottom: 2.4rem;
     }
-    .button-1{
-      padding: .8rem 2.4rem;
+    .btn-1{
+      padding: 1rem 2.4rem;
       margin-left: auto;
+        &--text{
+          font-size: 1.4rem;
+        }
     }
 }
