--- a/src/css/components/_form.scss
+++ b/src/css/components/_form.scss
@@ -51,6 +51,9 @@
   &--privacy{
     @include fontStyle(var(--black), 1.2rem, 400);
     line-height: 2rem;
+    margin-left: 4.5rem;
+    margin-top: 0.8rem;
+
       & > label{
         margin-bottom: 1rem;
           &:last-child{
@@ -83,10 +86,41 @@
   }
   &__bottom{
     @include flexLine;
-    margin-top: 2.2rem;
+    margin-top: 2rem;
+      .btn-1{
+        padding: 1.9rem 2.8rem;
+        background-color: var(--blue);
+        border-color: var(--blue);
+          &--text{
+            font-size: 1.6rem;
+          }
+          &:hover{
+            background-color: var(--pcolor);
+            border-color: var(--pcolor);
+              span{
+                color: var(--white);
+              }
+          }
+      }
   }
-  .button-1{
-    display: flex;
-    margin-left: auto;
+}
+
+
+@media screen and (max-width: 800px) {
+  .contact{
+    .grid2{
+      grid-template-columns: 1fr !important;
+    }
+    .contact__bottom{
+      flex-direction: column;
+        .contact--privacy{
+          margin-left: 0;
+        }
+        .btn-1{
+          margin-top: 2rem;
+          margin-left: auto;
+        }
+    }
   }
+
 }
