--- a/src/css/components/_loader.scss
+++ b/src/css/components/_loader.scss
@@ -5,7 +5,7 @@
 	height: 100vh;
 	width: 100vw;
 	overflow: hidden;
-	background: var(--grey);
+	background: var(--blue2);
 	z-index: 9999;
 	opacity: 1;
 	transition: opacity 1s;
@@ -13,12 +13,11 @@
 	justify-content: center;
   align-items: center;
 	
-	display: none;
+	// display: none;
 	.fullpage-loader__logo {
 		position: relative;
 			img{
-				width: 10rem;
-				height: 100%;
+				width: 24rem;
 
 				animation: shine 2s infinite cubic-bezier(0.42, 0, 0.58, 1);
 			}
