--- a/src/css/lib/_buttons.scss
+++ b/src/css/lib/_buttons.scss
@@ -1,21 +1,19 @@
 .btn-1{
   @include verticalCenter;
-  padding: 1rem 2rem;
+  padding: 1.9rem 2.8rem;
   background-color: var(--pcolor);
   border: 2px solid var(--pcolor);
   border-radius: 10rem;
   transition: .2s;
     &--text{
-      @include fontStyle(var(--white), 1.2rem, 500);
+      @include fontStyle(var(--white), 1.6rem, 500);
       text-transform: uppercase;
       transition: .2s;
     }
 
     &:hover{
-      background-color: transparent;
-        .btn-1--text{
-          color: var(--pcolor);
-        }
+      background-color: var(--blue);
+      border-color: var(--blue);
     }
 }
 
