--- a/src/css/lib/_typography.scss
+++ b/src/css/lib/_typography.scss
@@ -8,6 +8,9 @@ html {
 	html {
 		font-size: 2.5vw;
   }
+  main{
+    overflow: hidden;
+  }
   
   .fullpage-loader__logo {
     position: relative;
@@ -31,7 +34,7 @@ body {
 	font-family: var(--primaryFont);
   overflow-x: hidden;
   background-color: var(--blue2);
-  margin-top: -32px; //timber bug
+  // margin-top: -32px; //timber bug
 }
 
 @media screen and (max-width: 800px) { 
@@ -53,7 +56,7 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-  width: .7rem;
+  width: .8rem;
 }
 
 /* Track */
@@ -63,10 +66,23 @@ body {
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: var(--orange2); 
+  background: var(--pcolor); 
   border-radius: .4rem;
+  cursor: pointer;
 }
 
 
 
+.desktop-hide{
+  display: none !important;
+    @media screen and (max-width: 800px) { 
+      display: flex !important;
+    }
+}
 
+.mobile-hide{
+  display: flex !important;
+    @media screen and (max-width: 800px) { 
+      display: none !important;
+    }
+}
