--- a/src/css/views/1_header/_header.scss
+++ b/src/css/views/1_header/_header.scss
@@ -3,10 +3,11 @@
 
 .header{
   width: 100%;
-  z-index: 90;
-  padding-top: 3.4rem;
+  padding-top: 6.4rem;
   padding-bottom: 11.1rem;
   background-color: var(--white);
+
+  position: relative;
     &__mobileBelt{
       display: none;
     }
@@ -17,6 +18,7 @@
       margin: 0 auto;
         &__left{
           @include verticalCenter;
+          margin-left: -4rem;
         }
         &__right{
           display: flex;
@@ -62,7 +64,7 @@
           width: 24.1rem;
           height: 5.9rem;
 
-          margin-right: 8rem;
+          margin-right: 4.4rem;
             img{
               width: 100%;
               height: 100%;
@@ -73,6 +75,7 @@
 
         &__nav{
           display: flex;
+          margin-top: 1rem;
             & >.menu{
               display: flex;
               align-items: center;
@@ -81,9 +84,9 @@
                 & > .menu-item{
                   @include center;
                   margin-left: 6.7rem;
+                  font-size: 1.8rem;
 
                   transition: all .2s;
-                  position: relative; 
                     &::after{
                       content: '';
                       width: .8rem;
@@ -96,6 +99,8 @@
                       bottom: 0;
                       left: -3.1rem;
                       margin: auto 0;
+
+                      display: none;
                     }
                     &:hover{
                       color: var(--pcolor);
@@ -106,6 +111,75 @@
                           display: none;
                         }
                     }
+
+                    .sub-menu{
+                      width: 100vw;
+
+                      position: absolute;
+                      top: 11rem;
+                      left: 0;
+                      z-index: 89;
+
+                      list-style: none;
+
+                      opacity: 0;
+                      visibility: hidden;
+                      transition: .2s;
+                        &__color{
+                          margin-top: 5rem;
+                          background-color: var(--white);
+                          box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.16);
+                        }
+                        &__wrap{
+                          width: 160rem;
+                          margin: 0 auto;
+
+                          display: grid;
+                          grid-template-columns: repeat(5, 1fr);
+                          gap: 5rem;
+
+                          padding-top: 7.7rem;
+                          padding-bottom: 9.4rem;
+                        }
+                        .menu-item{
+                            a{
+                              @include center;
+                              flex-direction: column;
+                                p{
+                                  margin-bottom: 3.7rem;
+                                  text-align: center;
+                                  font-size: 1.6rem;
+                                  color: var(--pcolor);
+                                  text-transform: uppercase;
+                                  transition: .2s;
+                                }
+                                img{
+                                  width: 100%;
+                                  height: 18.3rem;
+                                  object-fit: cover;
+                                  border-radius: 1rem;
+                                  transition: .2s;
+                                }
+                            }
+                            &:hover{
+                              p{
+                                color: var(--blue);
+                              }
+                              img{
+                                box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.3);
+                              }
+                            }
+                        }
+                    }
+
+                }
+                & > .menu-item-has-children{
+                  &:hover{
+                    .sub-menu{
+                      opacity: 1;
+                      visibility: visible;
+                    }
+                  }
                 }
 
                 & >.active{
@@ -117,7 +191,8 @@
 
         &__socialmedia{
           @include verticalCenter;
-          margin-left: 20rem;
+          margin-left: 16rem;
+          margin-top: 1rem;
             &__single{
               margin-left: 0.5rem;
               width: 3.3rem;
@@ -181,9 +256,9 @@
       -webkit-transition: stroke-dasharray 500ms, stroke-dashoffset 500ms;
       -moz-transition: stroke-dasharray 500ms, stroke-dashoffset 500ms;
       transition: stroke-dasharray 500ms, stroke-dashoffset 500ms;
-      stroke: var(--black);
+      stroke: var(--pcolor);
       stroke-width: 4;
-      // stroke-linecap: round;
+      stroke-linecap: round;
     }
     path:nth-of-type(1) {
       stroke-dasharray: 40 139;
@@ -212,8 +287,8 @@
           -moz-transition: stroke-dasharray 500ms, stroke-dashoffset 500ms;
           transition: stroke-dasharray 500ms, stroke-dashoffset 500ms;
           stroke-width: 4;
-          // stroke-linecap: round;
-          stroke: var(--black);
+          stroke-linecap: round;
+          stroke: var(--white);
         }
     }
 }
