--- a/src/css/views/1_header/_rwd_header.scss
+++ b/src/css/views/1_header/_rwd_header.scss
@@ -3,6 +3,7 @@
     width: 100%;
     position: fixed !important;
     background-color: var(--white);
+    padding-top: 0;
     padding-bottom: 0;
     margin-top: 0;
     z-index: 90;
@@ -11,8 +12,8 @@
         @include flexLine('center'); 
 
         width: 100%;
-        padding: 1rem 2rem;
-        background-color: var(--white);
+        padding: 1.6rem 2rem;
+        background-color: var(--blue2);
           &__branding{
             font-size: 0;
             width: 20rem;
@@ -37,30 +38,37 @@
 
         padding: 0 2rem;
 
-        background-color: var(--white);
+        background-color: var(--blue);
 
         transition: transform .3s .1s ease-in-out; 
         transform: translateX(105vw);
         // transform: translateX(0);
 
         overflow: hidden;
-          &--subtitle{
-            display: none;
-          }
           &--active{
             transform: translateX(0);
           }
           &__branding{
+            width: 26rem;
+            height: auto;
+
+            margin-top: -16rem;
+            margin-right: 0;
+            margin-bottom: 4.8rem;
+            // display: none;
+          }
+          &__left{
+            flex-direction: column;
+            margin-left: 0;
+          }
+          &__right{
             display: none;
           }
-          &__socialMedia{
+          &__socialmedia{
             align-self: center;
 
-            margin-top: 6rem;
+            margin-left: 0;
             position: relative;
-            top: auto;
-            right: auto;
-
             flex-direction: row;
               &--single{
                 margin-bottom: 0;
@@ -77,6 +85,7 @@
             align-items: center;
             margin-right: 0;
             transform: translateX(0);
+            margin-top: 0;
               .menu{
                 flex-direction: column;
                 margin-bottom: 3.2rem;
@@ -85,17 +94,77 @@
                     margin-left: 0;
                     margin-bottom: 2.4rem;
                     font-size: 2.4rem;
+                    color: var(--white);
 
                     position: relative;
+                      &::after{
+                        display: none;
+                      }
                       &:last-child{
                         margin-bottom: 0;
                         margin-left: 0;
                       }
+
+
+                      .sub-menu{
+                        display: none !important;
+                        align-items: center;
+                        justify-content: flex-start;
+                        flex-direction: column;
+
+                        overflow-y: scroll;
+                        padding-top: 10rem;
+                        padding-bottom: 5rem;
+
+                        position: fixed;
+                        top: 0;
+                        left: 0;
+                        // opacity: 1;
+                        // visibility: visible;
+                        width: 100vw;
+                        height: 100vh;
+                        display: flex;
+                        flex-direction: column;
+                        transform: translateX(-105vw);
+                        z-index: 99;
+                        background-color: #fff;
+
+                        transition: .2s;
+                          &__wrap{
+                            width: 100%;
+                            height: 100%;
+                            background-color: #fff;
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            justify-content: flex-start;
+                          }
+                          &--active{
+                            opacity: 1;
+                            visibility: visible;
+                            transform: translateX(0);
+                          }
+                          .menu-item{
+                            border: none;
+                            margin-bottom: 2.4rem;
+                              &:last-child{
+                                margin-bottom: 0;
+                              }
+                              a{
+                                padding: 0;
+                              }
+                              span{
+                                display: none;
+                              }
+                          }
+                      }
+
                   }
                   .active{
-                    &::before{
-                      height: 0.1rem;
-                    }
+                    color: var(--pcolor);
+                      &::before{
+                        height: 0.1rem;
+                      }
                   }
               }
           }
