--- a/src/css/views/2_footer/_footer.scss
+++ b/src/css/views/2_footer/_footer.scss
@@ -1,6 +1,6 @@
 .footer{
   @include colStart;
-  padding-top: 7rem;
+  padding-top: 4.4rem;
   padding-bottom: 7.2rem;
   position: relative;
   background-color: var(--white);
@@ -14,8 +14,8 @@
       border-radius: 100%;
 
       position: absolute;
-      right: 4.4rem;
-      bottom: 4.6rem;
+      right: 3.7rem;
+      bottom: 5.2rem;
         img{
           width: 100%;
           height: 100%;
@@ -95,13 +95,16 @@
         }
 
         .header__main__socialmedia{
-          margin-left: 20.3rem;
+          margin-left: 21.8rem;
+        }
+        .header__main__right{
+          transform: translateY(3.6rem);
         }
     }
 
     &__bottom{
       @include flexLine;
-      margin-top: 1.8em;
+      margin-top: 5.8em;
         &__content{
           display: flex;
             &__single{
