--- a/src/css/views/2_footer/_rwd_footer.scss
+++ b/src/css/views/2_footer/_rwd_footer.scss
@@ -1,7 +1,7 @@
 @media screen and (max-width: 800px) {
   .footer{
     width: 100%;
-    padding: 8rem 2rem 2rem;
+    padding: 8rem 2rem 10rem;
     margin-top: 0;
     overflow: hidden;
 
@@ -11,48 +11,66 @@
         right: 1rem;
         bottom: 1rem;
       }
-      &__top{
+      &__top, &__bottom{
+        width: 100%;
         flex-direction: column;
-        padding: 0 2rem;
-          &__branding{
-            width: 25rem;
-            height: auto;
-            margin-bottom: 3.2rem;
-            margin-left: 0;
-              img{
-                object-fit: contain;
+      }
+      &__top{
+        &__wrap{
+          flex-direction: column;
+        }
+
+
+        &__branding{
+          width: 25rem;
+          height: auto;
+          margin-bottom: 3.2rem;
+          margin-left: 0;
+            img{
+              object-fit: contain;
+            }
+        }
+        
+        &__nav{
+          margin-top: 2rem;
+          margin-bottom: 4rem;
+          margin-left: 0;
+            .menu{
+              flex-direction: column;
+              .menu-item{
+                text-align: center;
+                font-size: 2.4rem;
+                margin-left: 0;
+                margin-bottom: 2.4rem;
+                  &::after{
+                    display: none;
+                  }
+                  &:last-child{
+                    margin-bottom: 0;
+                  }
               }
-          }
-         
-          &__nav{
-            margin-top: 2rem;
-            margin-bottom: 4rem;
-              .menu{
-                flex-direction: column;
-                .menu-item{
-                  text-align: center;
-                  font-size: 2.4rem;
-                  margin-left: 0;
-                  margin-bottom: 2.4rem;
-                    &:last-child{
-                      margin-bottom: 0;
-                    }
-                }
-              }
-          }
+            }
+        }
+
+        .header__main__socialmedia{
+          margin-left: 0;
+        }
       }
 
 
       &__bottom{
-        padding: 4rem 2rem 0;
-        margin-top: 4rem;
-        flex-direction: column;
-        position: relative;
+        margin-top: 8rem;
+          &__content{
+            flex-direction: column;
+              &__single{
+                width: 100% !important;
+                margin-bottom: 2rem;
+              }
+          }
           &__info{
             flex-direction: column;
               &--text{
-                text-align: center;
-                font-size: 1.8rem;
+                font-size: 1.6rem;
               }
           }
       }
