--- a/src/css/views/about_us/_rwd_about_us.scss
+++ b/src/css/views/about_us/_rwd_about_us.scss
@@ -1,43 +1,34 @@
 @media screen and (max-width: 800px) {
-  .s1_investor{
+  .s1_aboutUs{
+    width: 100%;
     padding: 0 2rem;
-    flex-direction: column-reverse;
-      &__img{
+    margin-top: 5rem;   
+    flex-direction: column;
+      &__content{ 
         width: 100%;
-        height: 32rem;
-      }
-
-      &__content{
+        margin-top: 0;
+        margin-bottom: 4.8rem;
+      }  
+      &--img{
         width: 100%;
-        margin-top: 2.4rem;
-        padding: 0;
+        height: auto;
       }
   }
 
-  .s2_investor{
-    margin-top: 8rem;
-    flex-direction: column-reverse;
-      &__content{
-        width: 100%;
-          &__title, &--text{
+  .s2_aboutUs{
+    width: 100%;
+    margin-bottom: 6rem;
+      &__single{
+        flex-direction: column;
+          &__content{
             width: 100%;
-            padding: 6rem 2rem;
+            padding-left: 0;
+            margin-top: 2.4rem;
+          }
+          &--img{
+            width: 100%;
+            height: auto;
           }
       }
-      &__img{
-        width: 100%;
-        height: 100%;
-        padding: 5rem;
-      }
-  }
-
-
-  .s3_investor{
-    &__img{
-      height: 32rem;
-    }
-    &__content{
-      padding: 8rem 2rem 8rem;
-    }
   }
 }
