--- a/src/css/views/contact/_rwd_contact.scss
+++ b/src/css/views/contact/_rwd_contact.scss
@@ -1,73 +1,34 @@
 @media screen and (max-width: 800px) {
   .s1_contact{
     width: 100%;
-    padding: 0;
+    margin-top: 5rem;
+    padding: 0 2rem;
     flex-direction: column;
-      &__left, &__right{
+      &__content{
         width: 100%;
+        padding-right: 0;
+          &__top{
+            flex-direction: column;
+            gap: 4rem;
+              h3, p{
+                font-size: 1.6rem;
+              }
+          }
+          .footer__bottom__content__single{
+            margin-bottom: 0;
+          }
       }
-      &__left{
-        padding: 18.1rem 2rem 8rem;
-      }
-      &__right{
-        padding: 8rem 2rem;
+
+      &__form{
+        width: 100%;
+        margin-top: 4.8rem;
+        transform: translateX(0);
       }
   }
 
 
   .s2_contact{
-    padding: 0;
-    margin-top: 4rem;
+    margin-top: 6.4rem;
     margin-bottom: 0;
-    flex-direction: column;
-      &__content{
-        width: 100%;
-        grid-template-columns: 1fr;
-        gap: 3.5rem 2.4rem;
-        padding: 0 2rem;
-
-        margin-right: 0;
-          &__single{
-            &--title{
-              margin-bottom: 1rem;
-            }
-          }
-      }
-
-      &--map{
-        width: 100%;
-        height: 32rem;
-        margin-top: 4rem;
-      }
-  }
-  
-
-  .s3_contact{
-    padding: 10rem 2rem 4rem;
-      &__header{
-        margin-bottom: 4rem;
-      }
-
-      .contact{
-        .grid2{
-          grid-template-columns: 1fr;
-        }
-        &__row{
-          gap: 1.4rem;
-        }
-        &__single{
-          &--input{
-            padding: 1.6rem ​2.6rem;
-          }
-        }
-
-        &__bottom{
-          margin-top: 1rem;
-          flex-direction: column;
-            .button-1{
-              margin-top: 2rem;
-            }
-        }
-      }
   }
 }
