--- a/src/css/views/gallery/_rwd_gallery.scss
+++ b/src/css/views/gallery/_rwd_gallery.scss
@@ -1,17 +1,12 @@
 @media screen and (max-width: 800px) {
-  .s1_clients{
-    grid-template-columns: repeat(1, 1fr);
+  .s1_gallery{
+    width: 100%;
     padding: 0 2rem;
-    margin-bottom: 8rem;
+    margin-top: 5rem;
+    grid-template-columns: 1fr;
       &__single{
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        padding: 6rem 2rem;
-          &__logo{
-            margin-right: 0;
-            margin-bottom: 2.4rem;
-          }
+        height: auto;
+        max-height: 50rem;
       }
   }
 }
