--- a/src/css/views/trip/_trip.scss
+++ b/src/css/views/trip/_trip.scss
@@ -1,6 +1,6 @@
 .s1_trip{
   width: 160rem;
-  margin: 2.5rem auto 17.6rem;
+  margin: 2.5rem auto 11.7rem;
 
   display: flex;
   align-items: flex-start;
@@ -13,23 +13,23 @@
       position: sticky;
       top: 2.5rem;
         .productGallery-top{
+          width: 100%;
+          height: 50rem;
+          border-radius: 1.6rem;
+            .swiper-slide{
+              @include center;
+
               width: 100%;
-              height: 50rem;
-              border-radius: 1.6rem;
-                .swiper-slide{
-                  @include center;
+              height: 100%;
 
+              cursor: pointer;
+                img{
                   width: 100%;
-                  height: 100%;
-
-                  cursor: pointer;
-                    img{
-                      width: 100%;
-                      max-height: 100%;
-                      object-fit: contain
-                    }
+                  max-height: 100%;
+                  object-fit: contain
                 }
             }
+        }
 
             .productGallery-bottom{
               width: 100%;
@@ -92,19 +92,20 @@
           display: flex;
         }
         .tripCard{
-          padding: 2.1rem 4rem 4rem 3.6rem;
+          padding: 1.2rem 4rem 4rem 4rem;
           background-color: var(--white);
           border-radius: 1rem;
-          margin-top: 2.8rem;
+          margin-top: 1.6rem;
             h2{
               color: var(--blue);
-              margin-bottom: 2.5rem;
+              margin-bottom: 1.5rem;
+              text-transform: uppercase
             }
 
             &__info{
               @include flexLine('center');
-              margin-top: 4.1rem;
-              margin-bottom: 5.3rem;
+              margin-top: 3.2rem;
+              margin-bottom: 4.3rem;
 
               padding: 1.8rem 0;
               border-top: .1rem solid var(--blue2);
@@ -136,12 +137,24 @@
                     }
                 }
 
+                &__button{
+                  padding: .7rem 1.9rem;
+                    span{
+                      font-size: 1rem;
+                    }
+                    .btn-1--icon{
+                      margin-right: 0.6rem;
+                      position: relative;
+                      top: 0.1rem;
+                    }
+                }
               }
+
 
 
               &__repeat{
                   &__single{
-                    margin-bottom: 5.3rem;
+                    margin-bottom: 3.4rem;
                       &:last-child{
                         margin-bottom: 0;
                       }
@@ -169,13 +182,14 @@
         }
 
         &__form{
-          margin-top: 3.3rem;
+          margin-top: 2.7rem;
           background-color: var(--blue);
           border-radius: 1rem;
-          padding: 4.5rem 3.7rem;
+          padding: 3.8rem 3.7rem;
             h2{
               color: var(--white);
-              margin-bottom: 3.5rem;
+              margin-bottom: 2.9rem;
+              text-transform: uppercase;
             }
 
             .contact__single--input, .contact__single--textarea{
@@ -188,6 +202,17 @@
             .contact--privacy{
               color: var(--white);
             }
+
+            .btn-1{
+              background-color: var(--pcolor);
+              border-color: var(--pcolor);
+                &:hover{
+                  background-color: transparent;
+                    span{
+                      color: var(--pcolor)
+                    }
+                }
+            }
         }
     }
 }
@@ -197,7 +222,7 @@
     &__addNew{
       @include center; 
       flex-direction: column;
-      padding: 6.1rem 2rem 7.9rem;
+      padding: 5.2rem 2rem 7.9rem;
       background-color: var(--white);
         &--title, &--text{
           text-align: center;
@@ -206,14 +231,14 @@
           color: var(--black);
         }
         &--text{
-          margin-top: 3.6rem;
-          margin-bottom: 4.6rem;
+          margin-top: 2.2rem;
+          margin-bottom: 1.7rem;
         }
         .reviews-area{
           width: 64rem;
             .review-rating{
               @include verticalCenter;
-              margin-bottom: 4.8rem !important;
+              margin-bottom: 3.8rem !important;
                 label{
                   margin-right: 2.6rem;
                 }
@@ -277,12 +302,16 @@
             }
             .review-rating > span{
               color: #FFC107;
-              font-size: 3.5rem !important;
+              font-size: 4rem !important;
               width: auto !important;
               height: auto !important;
 
               position: relative;
-              top: -0.7rem;
+              top: .2rem;
+                &::before{
+                  line-height: 0 !important;
+                  vertical-align: unset !important;
+                }
             }
 
             .logged-in-as{
@@ -299,7 +328,7 @@
     }
 
     &__list{
-      padding: 7.8rem 0;
+      padding: 6.9rem 0;
       background-color: var(--blue2);
         &__header, &__slider{
           width: 160rem;
@@ -307,22 +336,29 @@
         }
 
         &__header{
-          margin-bottom: 5.1rem;
+          margin-bottom: 6.5rem;
             h2, p{
               color: var(--black);
             }
             p{
               margin-top: 1.9rem;
+              font-size: 4rem;
             }
         }
 
 
         &__slider{
-          display: grid;
-          grid-template-columns: repeat(3, 1fr);
-          gap: 5rem;
-
-          align-items: flex-start
+        }
+        .swiper-scrollbar{
+          width: 160rem;
+          height: 1rem;
+          
+          margin: 7rem auto 0;
+          border-radius: 1rem;
+          background-color: var(--white);
+            .swiper-scrollbar-drag{
+              background-color: var(--blue);
+            }
         }
     }
 }
