--- a/src/css/views/trips/_trips.scss
+++ b/src/css/views/trips/_trips.scss
@@ -15,6 +15,10 @@
       top: 2.5rem;
         .banner{
           width: 100%;
+          padding-top: 0;
+            &__wrap{
+              width: 100%;
+            }
             &--title{
               font-size: 4rem;
               line-height: 5rem;
