--- a/templates/partial/pageHeader.twig
+++ b/templates/partial/pageHeader.twig
@@ -1,5 +1,5 @@
 <header class="pageHeader">
-  <h1 class="pageHeader--title tit-50">{{acf.pageHeader_title}}</h1>
+  <h1 class="pageHeader--title tit-50">{{title}}</h1>
 
   {% if acf.pageHeader_img.url %}
     <img class="pageHeader--img" src="{{acf.pageHeader_img.url}}" alt="{{acf.pageHeader_img.alt}}">
