--- a/src/css/views/1_header/_rwd_header.scss
+++ b/src/css/views/1_header/_rwd_header.scss
@@ -97,8 +97,10 @@
                     color: var(--white);
 
                     position: relative;
-                      &::after{
-                        display: none;
+                      a{
+                        &::after{
+                          display: none;
+                        }
                       }
                       &:last-child{
                         margin-bottom: 0;
