--- a/templates/partial/opinions.twig
+++ b/templates/partial/opinions.twig
@@ -1,10 +1,10 @@
 <div class="opinions">
   <header class="opinions__header">
-    <h2 class="tit-50">Opinie klientów</h2>
+    <h2 class="tit-50">{{pll__('opinions')}}</h2>
 
 
     <a class="btn-1" href="/oferta">
-      <span class="btn-1--text">ZOBACZ NASZE WYCIECZKI</span>
+      <span class="btn-1--text">{{pll__('show_more')}}</span>
     </a> 
   </header>
 
