--- a/templates/views/4_error_404/404.twig
+++ b/templates/views/4_error_404/404.twig
@@ -11,9 +11,9 @@
 
 
 <section class="grid error-404" style="text-align:center;padding:100px 0;">
-	<h2 class="title-40">{{title}}</h2>
-	<a class="button-2" href="{{fn('get_pll_home_url')}}">
-		<span class="button-2--text">{{button}}</span>
+  <h2 class="tit-50" style="color: var(--black)">{{title}}</h2>
+  <a class="btn-1" href="{{home_url()}}">
+		<span class="btn-1--text">{{button}}</span>
 	</a>
 </section>
 
