--- a/src/css/components/_breadcrumbs.scss
+++ b/src/css/components/_breadcrumbs.scss
@@ -1,17 +1,44 @@
 .breadcrumbs{
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   color: var(--grey);
-    .stepIcon{
-      width: 2rem;
-      height: 0.1rem;
-      background-color: var(--grey);
-      margin: 0 1.5rem;
+  gap: 1.2rem;
+
+  list-style: none;
+    li{
+      position: relative; 
+        &::after{
+          content: '';
+          width: .3rem;
+          height: .3rem;
+          border-radius: 100%;
+
+          background-color: var(--grey2);
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: -1.2rem;
+          margin: auto 0;
+        }
+        &:first-child{
+          &::after{
+            display: none;
+          }
+        }
     }
+
+
+
+
+
+
     a{
       transition: .2s;
         &:hover{
-          color: var(--purple);
+          color: var(--pcolor);
         }
     }
+
+    
 }
