--- a/src/css/components/_opinions.scss
+++ b/src/css/components/_opinions.scss
@@ -47,6 +47,10 @@
       font-size: 1.2rem;
       font-weight: 500;
       text-transform: uppercase;
+      transition: .2s;
+        &:hover{
+          color: var(--pcolor);
+        }
     }
 
 
