--- a/src/css/views/homepage/_homepage.scss
+++ b/src/css/views/homepage/_homepage.scss
@@ -6,7 +6,6 @@
 
 
 .s1_homepage{
-  @include center;
 
   width: 100%;
   min-height: 81.4rem;
@@ -15,32 +14,42 @@
   margin-top: -56rem;
 
   position: relative;
-    &::after{
-      content: '';
-      width: 100%;
+   
+
+    &__slider{
       height: 100%;
-      background-color: var(--blue);
-      opacity: 0.6;
+      z-index: 3 !important;
+        .swiper-slide{
+          @include center;
+          min-height: 81.4rem;
+
+           &::after{
+            content: '';
+            width: 100%;
+            height: 100%;
+            background-color: var(--blue);
+            opacity: 0.6;
 
 
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 1;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+          }
+          &::before{
+            content: '';
+            width: 100%;
+            height: 48.3rem;
+            background: linear-gradient(#057fd1 0%, rgba(5, 127, 209, 0) 100%);
+            transform: rotate(180deg);
+
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            z-index: 2;
+          }
+        }
     }
-    &::before{
-      content: '';
-      width: 100%;
-      height: 48.3rem;
-      background: linear-gradient(#057fd1 0%, rgba(5, 127, 209, 0) 100%);
-      transform: rotate(180deg);
-
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      z-index: 2;
-    }
-
     &--img{
       width: 100%;
       height: 100%;
@@ -111,6 +120,10 @@
             &:hover{
               box-shadow: 0 0 5rem rgba(0, 0, 0, 0.15);
             }
+
+            &__header{
+              min-height: 14.6rem;
+            } 
             
             &--title{
               width: 100%;
@@ -118,7 +131,7 @@
             }
 
             &__tax{
-              font-size: 1.2rem;
+              font-size: 1.4rem;
               color: var(--grey);
             }
 
