--- a/src/css/views/trips/_rwd_trips.scss
+++ b/src/css/views/trips/_rwd_trips.scss
@@ -3,16 +3,27 @@
     width: 100%;
     margin-top: 5rem;
     padding: 0 2rem;
+    gap: 4.8rem;
     flex-direction: column;
       &__filters{
         width: 100%;
         position: relative;
         top: 0;
+          .banner{
+            display: none;
+          }
+
+          &__taxonomyFilter{
+            margin-bottom: 0;
+              .reset {
+                margin-top: 6.4rem;
+              }
+          }
       }
 
       &__list{
         width: 100%;
-        margin-top: 4.8rem;
+        margin-top: 0;
           .pagination{
             margin: 4.8rem auto 0;
               &__list{
