--- a/src/css/views/trips/_trips.scss
+++ b/src/css/views/trips/_trips.scss
@@ -9,10 +9,135 @@
   position: relative;
     &__filters{
       width: 32rem;
-      height: 32rem;
+        &__taxonomyFilter{
+          @include colStart;
 
-      position: sticky;
-      top: 2.5rem;
+          width: 100%;
+          font-size: 1.6rem;
+          color: var(--black);
+          text-transform: uppercase;
+          margin-bottom: 8.9rem;
+            a{
+              transition: .2s;
+                &:hover{
+                  color: var(--pcolor);
+                }
+            }
+
+            ul.tree {
+              width: 100%;
+              list-style: none;
+              
+                li {
+                  position: relative;
+                  margin-top: 2rem;
+                  
+                    input {
+                      cursor: pointer;
+
+                      width: 1.5rem;
+                      height: 1.8rem;
+                      left: 0;
+                      margin-left: 0;
+                      opacity: 0;
+                      position: absolute;
+                      top: 0;
+                      z-index: 2;
+                        &:checked+ul {
+                          height: auto;
+                            &:before {
+                              transform: rotate(0);
+                            }
+                        }
+                        &:checked+ul>li {
+                          display: block;
+                        }
+                    }
+                    input+ul {
+                      &:before {
+                        content: ""; //MINUS
+
+                          width: 1rem;
+                          height: 1rem;
+                          background-image: url('../../assets/arrow_bottom_small.svg');
+                          background-size: contain;
+                          background-repeat: no-repeat;
+                          background-position: center;
+
+                          transform: rotate(-90deg);
+
+                          position: absolute;
+                          left: 0;
+                          top: .3rem;
+                      }
+                    }
+                    input+ul>li {
+                      display: none;
+                    }
+                    label {
+                      cursor: pointer;
+                      margin-bottom: 0;
+                      margin-left: 2rem;
+                    }
+                }
+            }
+
+            .firstLv{
+              &__li{
+                &:first-child{
+                  margin-top: 0;
+                }
+                &--label{
+                  color: var(--blue);
+                }
+              }
+            }
+
+            .secondaryLv{
+              margin-left: 5rem;
+            }
+
+            .thirdLv{
+              margin-left: 4.3rem;
+            }
+
+            & > ul{
+              margin-top: 2.4rem;
+              padding-top: 2.4rem;
+              border-top: .1rem solid #D1E2F1;
+                &:first-child{
+                  margin-top: 0;
+                  padding-top: 0;
+                  border: none;
+                }
+            }
+            .reset{
+              @include verticalCenter;
+              padding: 1rem 1.4rem 1rem 2rem;
+              border-radius: 10rem;
+              background-color: var(--black);
+              transition: .2s;
+
+              margin-top: 11.3rem;
+                &--text{
+                  font-size: 1.6rem;
+                  text-transform: uppercase;
+                  color: var(--white);
+                }
+                &--icon{
+                  width: 1.6rem;
+                  height: 1.6rem;
+                  object-fit: contain;
+                  margin-left: 1.2rem;
+                }
+
+                &:hover{
+                  background-color: var(--pcolor);
+                }
+            }
+        }
+
+
         .banner{
           width: 100%;
           padding-top: 0;
@@ -76,3 +201,7 @@
         }
     }
 }
+
+
+
+
