--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Website Style Theme
-Theme URI: http://websitestyle.pl/
-Author: websitestyle
-Author URI: https://www.websitestyle.pl
-Description: Kontakt: ☎ +48 660 465 403 ☎ info@websitestyle.pl
+Theme Name: Columbus
+Theme URI: http://www.columbuswycieczki.pl/
+Author: Paweł Hincka
+Author URI: https://hincka.pl/
+Description: Realizacja Paweł Hincka 2022
 Version: 1.0
-Text Domain: ws
+Text Domain: ths
 */
