--- a/templates/views/5_pages/contact.twig
+++ b/templates/views/5_pages/contact.twig
@@ -16,7 +16,7 @@
     </div>
 
     <div class="header__main__right">
-      <p class="txt-16">Informacje i rezerwacje</p>
+      <p class="txt-16">{{pll__('info')}}</p>
       {% if options.contact_tel %}
         <ul class="header__main__right__tel">
           {% for single in options.contact_tel %}
